Client page finished

--- a/src/app/features/user/auth/auth.component.html
+++ b/src/app/features/user/auth/auth.component.html
@@ -31,7 +31,12 @@
                             Firstepga kirish
                         </h2>
                         <p class="leading-6">
-                            <span class="text-[#017AFF]">&#64;firstepbot</span>
+                            <a
+                                href="https://t.me/@firstepbot"
+                                target="_blank"
+                                class="text-[#017AFF]"
+                                >&#64;firstepbot</a
+                            >
                             orqali kodni oling va kiriting
                         </p>
                     </div>
@@ -49,14 +54,16 @@
                                 <div>
                                     <input
                                         #otpInput
-                                        type="text"
+                                        type="number"
                                         [formControlName]="
                                             'password-' + (i + 1)
                                         "
                                         maxlength="1"
+                                        [max]="1"
+                                        [ariaValueMax]="2"
                                         placeholder="0"
                                         (input)="onInput($event, i)"
-                                        class="w-12 h-12 text-center rounded-xl bg-white shadow-[0px_1px_3px_0px_#2F2B431A] border border-[#0E141B1A] focus:border-blue-400 transition-all duration-200 placeholder:text-gray-400"
+                                        class="w-12 h-12 text-center rounded-xl bg-white shadow-[0px_1px_3px_0px_#2F2B431A] outline-none border border-[#0E141B1A] focus:border-blue-400 transition-all duration-200 placeholder:text-gray-400"
                                     />
                                 </div>
                             }
