--- a/src/app/features/user/auth/auth.component.css
+++ b/src/app/features/user/auth/auth.component.css
@@ -14,3 +14,13 @@
     transform: translateY(0%);
   }
 }
+
+input[type=number]::-webkit-outer-spin-button,
+input[type=number]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+input[type=number] {
+  -moz-appearance: textfield;
+}
