--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -259,6 +259,7 @@
                                 </ul>
                             </div>
                             <a
+                                routerLink="/login"
                                 class="flex items-center gap-1 px-4 py-3 hover:bg-gray-100 rounded-b-xl space-x-2 cursor-pointer"
                             >
                                 <svg
